# accumulate_studio

./: .gitignore  .vercelignore  LICENSE  README.md  generate-action-palette-csharp.mjs  generate-action-palette-dart-batch2.mjs  generate-action-palette-dart.mjs  generate-action-palette-javascript.mjs  generate-action-palette-python-batch2.mjs  generate-action-palette-python.mjs  generate-action-palette-rust.mjs  generate-csharp.mjs  generate-javascript.mjs  generate-rust.mjs  package-lock.json  package.json  tsconfig.base.json  vercel.json
apps/mcp-server/: package.json  tsconfig.json
apps/sdk-proxy/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/sdk-proxy/app/: __init__.py  body_padding.py  config.py  main.py  models.py  session_store.py
apps/sdk-proxy/app/routes/: __init__.py  credits.py  data.py  faucet.py  generic.py  identity.py  keys.py  query.py  tokens.py
schemas/: agent-pack.schema.json  assertions.schema.json  bundle-manifest.schema.json  sdk-map.schema.json
scripts/: check-manifest-drift.ts  generate-action-palette-csharp.mjs  generate-action-palette-dart-batch2.mjs  generate-action-palette-dart.mjs  generate-action-palette-javascript.mjs  generate-action-palette-python-batch2.mjs  generate-action-palette-python.mjs  generate-action-palette-rust.mjs  generate-csharp.mjs  generate-javascript.mjs  generate-rust.mjs
templates/: adi-creation.yaml  custom-token.yaml  data-writing.yaml  index.ts  key-rotation.yaml  lite-account-setup.yaml  multi-sig-setup.yaml  package.json  token-transfer.yaml  zero-to-hero.yaml
(+78 files in other folders)
