[project]
name = "accumulate-studio-proxy"
version = "0.1.0"
description = "SDK proxy service for Accumulate Studio - handles transaction signing and submission via the Python SDK"
requires-python = ">=3.9"
dependencies = [
    "accumulate-sdk-opendlt==2.0.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
